<resources>
    <string name="app_name">WHC-2016</string>
    <string name="action_sign_out">Đăng xuất</string>
    <string name="title_activity_main">Trang Chủ</string>
    <string name="no_internet">Không có kết nối mạng</string>
    <string name="timeout_conn">Không thể kết nối đến máy chủ</string>
    <string name="error_system">Xảy ra lỗi trong hệ thống</string>
    <string name="title_activity_sign_in">Đăng nhập</string>
    <string name="title_activity_hom_nay">Phiếu hôm nay</string>
    <string name="try_again">Thử lại</string>
    <string name="title_activity_phieu_cua_toi">Phiếu của tôi</string>
    <string name="title_activity_scan_phieu_cua_toi">Order detail</string>
    <string name="title_activity_chup_hinh">Chụp hình đơn hàng</string>
    <string name="search_phieu">Tìm theo loại phiếu</string>
    <string name="title_activity_worker">Nhân Viên</string>
    <string name="temperature">Nhiệt Độ</string>
    <string name="dockNumber">Cửa Nhập</string>
    <string name="co_khoa">Có khóa</string>
    <string name="percent">Phần Trăm</string>
    <string name="supervisor">Supervisor</string>
    <string name="supervisorPercent">Tổng Phần Trăm</string>
    <string name="title_activity_khach_hang">Khách hàng hôm nay</string>
    <string name="search_khach_hang">Tìm theo tên hoặc mã khách hàng</string>
    <string name="percent_symbol">Năng suất (%)</string>
    <string name="hoan_thanh">Hoàn Thành</string>
    <string name="tong_so_thung">Thực nhập/xuất</string>
    <string name="sai_lech">Sai lệch</string>
    <string name="dv_cnts">(cnts)</string>
    <string name="so_xe">Số Xe</string>
    <string name="seal">Seal</string>
    <string name="tc_cua">T°C | Cửa:</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="boc_xep_1">Bốc xếp 1</string>
    <string name="boc_xep_2">Bốc xếp 2</string>
    <string name="boc_xep_3">Bốc xếp 3</string>
    <string name="boc_xep_4">Bốc xếp 4</string>
    <string name="boc_xep_5">Bốc xếp 5</string>
    <string name="walkie_1">Walkie 1</string>
    <string name="walkie_2">Walkie 2</string>
    <string name="walkie_3">Walkie 3</string>
    <string name="walkie_4">Walkie 4</string>
    <string name="tai_xe_1">Tài xế 1</string>
    <string name="tai_xe_2">Tài xế 2</string>
    <string name="mui_hoi">Mùi hôi</string>
    <string name="thung_rach">Thùng Rách</string>
    <string name="uot_chay_nuoc">Ướt, chảy nước</string>
    <string name="thieu_hang">Thiếu hàng</string>
    <string name="bung_nap">Bung nắp</string>
    <string name="mop_meo">Móp méo</string>
    <string name="clean">Sạch</string>
    <string name="hu_hong">Hư hỏng</string>
    <string name="moc">Mốc</string>
    <string name="do_be">Ngã đổ, bể</string>
    <string name="soft">Mềm</string>
    <string name="moi_mot">Mối, mọt, côn trùng</string>
    <string name="thuy_tinh_go_vun">Thủy tinh, gỗ vụn</string>
    <string name="xi">Xì</string>
    <string name="ban">Bẩn</string>
    <string name="khac">Khác</string>
    <string-array name="qhse_type">
        <item>An toàn</item>
        <item>Vệ sinh</item>
        <item>Quản lý hàng</item>
        <item>Nhân sự</item>
        <item>Cơ sở vật chất</item>
        <item>Khác</item>
    </string-array>
    <string-array name="reason">
        <item>Joined</item>
        <item>Moved</item>
    </string-array>
    <string-array name="metro_ly_do">
        <item>""</item>
        <item>Hàng dập, thối</item>
        <item>Hàng quá HSD</item>
        <item>Hàng hư hỏng</item>
    </string-array>
    <string name="title_activity_so_do_day">Sơ đồ dây</string>
    <string name="giam_sat">Giám sát</string>
    <string name="cancel">Hủy</string>
    <string name="update">Cập nhật</string>
    <string name="kiem_hang">Kiểm hàng</string>
    <string name="title_activity_giao_viec">Giao Việc</string>
    <string name="upload">Tải lên</string>
    <string name="title_activity_upload_file">Tải tệp lên</string>
    <string name="title_activity_kiem_container">Danh sách Xe/Container</string>
    <string name="phieu_hom_nay">Phiếu Hôm Nay</string>
    <string name="phieu_cua_toi">Phiếu Của Tôi</string>
    <string name="phieu_da_xong">Phiếu Đã Xong</string>
    <string name="giao_ho_so">Giao - Nhận hồ sơ</string>
    <string name="nhap_ho_so">Nhập Hồ Sơ</string>
    <string name="qa_kiem">QA Kiểm</string>
    <string name="kiem_container">Kiểm Container</string>
    <string name="kiem_vi_tri">Xem Vị Trí</string>
    <string name="keim_pallet">Xem Pallet/Carton</string>
    <string name="keim_ho_so">Kiểm Hồ Sơ</string>
    <string name="vi_tri_trong">Vị Trí Trống</string>
    <string name="ton_kho">Tồn Kho</string>
    <string name="nang_suat">Năng Suất</string>
    <string name="lich_su_chuyen_hang">Chuyển Hàng</string>
    <string name="doi_mat_khau">Change Password</string>
    <string name="scan_tung_thung">Scan từng thùng</string>
    <string name="container_information">Thông tin xe/cont</string>
    <string name="nhap_ngoai_gio">Nhập Ngoài Giờ</string>
    <string name="giao_viec">Giao Việc</string>
    <string name="lich_trinh">Lịch trình tuần</string>
    <string name="lich_lam_viec">Lịch Làm Việc</string>
    <string name="cap_nhat_moi">Update Version</string>
    <string name="lich_su_ra_vao">Lịch Sử Ra Vào</string>
    <string name="ve_sinh_an_toan">Vệ sinh an toàn</string>
    <string name="gps">GPS Tracking</string>
    <string name="fixed_asset">Fixed asset</string>
    <string name="remark">Product Remark</string>
    <string name="search">Search</string>
    <string name="place">Place</string>
    <string name="plt_id">ID</string>
    <string name="qty">Qty</string>
    <string name="nsx_hsd">NSX/HSD</string>
    <string name="check">Check</string>
    <string name="ok">OK</string>
    <string name="title_activity_detail_container">Thông tin Container</string>
    <string name="tc_hien_thi">T℃ hiển thị</string>
    <string name="tc_thiet_lap">T℃ thiết lập</string>
    <string name="so_cua">Số cửa</string>
    <string name="chua_hoat_dong">Chưa hoạt động</string>
    <string name="chay">Chạy</string>
    <string name="xa">Xả</string>
    <string name="ngung">Ngưng</string>
    <string name="loi">Lỗi</string>
    <string name="co_hang">Có hàng</string>
    <string name="khoa">Khóa</string>
    <string name="ghi_chu">Ghi chú</string>
    <string name="tat_ca">Tất cả</string>
    <string name="gate_1">G-1</string>
    <string name="gate_2">G-2</string>
    <string name="khong">Không</string>
    <string name="kiem_tra">Kiểm tra lại</string>
    <string name="chup_hinh">Chụp hình</string>
    <string name="xem_hinh">Xem hình</string>
    <string name="title_activity_change_password">Đổi mật khẩu</string>
    <string name="title_activity_qhse">Vệ sinh an toàn</string>
    <string name="title_activity_new_qhse">Thêm yêu cầu</string>
    <string name="title_activity_cap_nhat_ung_dung">Cập nhật ứng dụng</string>
    <string name="this_field_not_empty">Trường này không được để trống</string>
    <string name="field_not_empty">Trường %s không được để trống</string>
    <string name="title_activity_update_qhse">Cập nhật thông tin</string>
    <string name="pallet_status">Trạng thái của Pallet</string>
    <string name="phieu_da_duoc_kiem">Phiếu đã được kiểm</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="tao_moi">Tạo mới</string>
    <string name="title_activity_nhap_ho_so">Nhập hồ sơ</string>
    <string name="title_activity_nhap_ho_so_no_emdk">Nhập hồ sơ</string>
    <string name="barcode">Barcode</string>
    <string name="title_activity_giao_ho_so">Giao - Nhận hồ sơ</string>
    <string name="kho">Kho</string>
    <string name="kho_123">Kho 123</string>
    <string name="kho_45">Kho 45</string>
    <string name="ho_so">Hồ sơ</string>
    <string name="title_activity_sign">Ký tên</string>
    <string name="lam_moi">Làm mới</string>
    <string name="bigc">Big C</string>
    <string name="title_activity_free_location">Vị trí trống</string>
    <string name="title_activity_pallet_carton_checking">Kiểm Pallet Carton</string>
    <string name="lich_su_chuyen">Lịch sử chuyển</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="title_activity_nang_suat">Năng suất</string>
    <string name="metro_fv">Metro-FV</string>
    <string name="vinmart">Vinmart</string>
    <string name="title_activity_lich_su_ra_vao">Lịch sử ra vào</string>
    <string name="department">Department</string>
    <string name="dep_123">1-2-3</string>
    <string name="dep_45">4-5</string>
    <string name="dep_metro">Metro</string>
    <string name="dep_tech">Tech</string>
    <string name="dep_adm">Adm</string>
    <string name="dep_services">Services</string>
    <string name="sort">Sort</string>
    <string name="product_no">Product No</string>
    <string name="product_name">Product Name</string>
    <string name="nxs">NXS</string>
    <string name="hsd">HSD</string>
    <string name="vi_tri">Vi tri</string>
    <string name="title_activity_kiem_ho_so">Kiểm hồ sơ</string>
    <string name="password">Password</string>
    <string name="username">ID</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="auto_sign_out">Tự động đăng xuất</string>
    <string name="remember_sign_in_info">Nhớ thông tin đăng nhập</string>
    <string name="comment">Comment</string>
    <string name="chu_de">Chủ đề</string>
    <string name="noi_dung_yeu_cau">Nội dung yêu cầu</string>
    <string name="khu_vuc">Khu vực</string>
    <string name="loai">Loại</string>
    <string name="thoi_gian">Thời gian:</string>
    <string name="id">ID</string>
    <string name="ho_so_x">Hồ sơ %s</string>
    <string name="chon_hinh_tu_may_anh">Chụp hình từ máy ảnh</string>
    <string name="chon_hinh_tu_bo_suu_tap">Chọn hình từ bộ sưu tập</string>
    <string name="chon_nguon_anh">Chọn nguồn ảnh</string>
    <string name="chon_ung_dung">Chọn ứng dụng</string>
    <string name="ky_nhan">Ký Nhận</string>
    <string name="s_camera">S.Camera</string>
    <string name="an_toan">An toàn</string>
    <string name="ve_sinh">Vệ sinh</string>
    <string name="vequan_ly_hang">Quản lý hàng</string>
    <string name="nhan_su">Nhân sự</string>
    <string name="co_so_vat_chat">Cơ sở vật chất</string>
    <string name="all">All</string>
    <string name="outside">Outside</string>
    <string name="online">Online</string>
    <string name="no">Không</string>
    <string name="opportunity_name">Name</string>
    <string name="opportunity_description">Description</string>
    <string name="opportunity_assign_to_user">Assign to</string>
    <string name="opportunity_probability">Probability(%)</string>
    <string name="opportunity_type">Type</string>
    <string name="opportunity_sale_stage">Sale stage</string>
    <string name="opportunity_forecasting">Forecasting</string>
    <string name="opportunity_pallets">Pallets</string>
    <string name="opportunity_cartons">Cartons</string>
    <string name="opportunity_units">Units</string>
    <string name="opportunity_weights">Weights</string>
    <string name="opportunity_close_date">Close Date</string>
    <string name="label_customer_id">Customer Id</string>
    <string name="label_edit">Edit</string>
    <string name="label_done">Done</string>
    <string name="label_delete">Delete</string>
    <string name="label_container">Container</string>
    <string name="label_xe">Xe</string>
    <string name="label_note">Note</string>
    <string name="label_duration">Duration</string>
    <string name="label_ot">OT</string>
    <string name="label_id_name">ID/Name</string>
    <string name="label_p_f">P/F</string>
    <string name="label_create">Create</string>
    <string name="label_it">IT</string>
    <string name="label_me">ME</string>
    <string name="label_mhe">MHE</string>
    <string name="label_ref">REF</string>
    <string name="label_s">s</string>
</resources>