<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/dialog_check_container_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/dialog_check_container_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tat_ca" />

        <RadioButton
            android:id="@+id/dialog_check_container_gate_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/gate_1" />

        <RadioButton
            android:id="@+id/dialog_check_container_gate_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/gate_2" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/dialog_check_container_xe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_xe" />

    <CheckBox
        android:id="@+id/dialog_check_container_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_container" />

</LinearLayout>