<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/label_id_name"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/label_duration"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/label_ot"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="22dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/label_p_f"
        android:textColor="#000"
        android:textStyle="bold" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/label_note"
        android:textColor="#000"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewEmployee"
        android:layout_width="@dimen/icon_remove_width"
        android:layout_height="1dp" />

</LinearLayout>